--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salina = ci \n",
+    "salina = cities[] \n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
