--- a/index.ipynb
+++ b/index.ipynb
@@ -445,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['PyeongChang', 'South Korea', 2581000, 3194]"
+       "list"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
