--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = list(cit)\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
